# back/src/resources/finding/finding.types.ts
@@ -11,3 +11,10 @@ export type FindingPublic = Omit<Finding,
 
 export type CreateFindingDTO = Omit<Finding, 'id' | 'reporterId'>;
 export type UpdateFindingDTO = Omit<Finding, 'id' | 'reporterId' | 'projectId'>;
+
+export type SearchFinding = {
+    title?:string,
+    categoryId?:string,
+    severityId?:string,
+    statusId?:string,
+};
