# back/src/resources/project/project.router.ts
@@ -1,7 +1,7 @@
 import { Router } from 'express';
 import isAuth from '../../middlewares/isAuth';
 import { validate } from '../../middlewares/validate';
-import { projectSchema } from './project.schema';
+import { projectSchema, searchProjectSchema } from './project.schema';
 import projectController from './project.controller';
 import hasAccess from '../../middlewares/hasAccess';
 import isOwner from '../../middlewares/isOwner';
@@ -10,6 +10,7 @@ const router = Router();
 
 router.get('/', isAuth, projectController.index);
 router.post('/', isAuth, validate(projectSchema), projectController.create);
+router.post('/search', isAuth, validate(searchProjectSchema), projectController.search);
 router.put('/:projectId', hasAccess, validate(projectSchema), projectController.update);
 router.delete('/:projectId', isOwner, projectController.remove);
 router.get('/:projectId', hasAccess, projectController.read);
