# back/src/resources/project/project.types.ts
@@ -1,3 +1,5 @@
 import { Project } from '../../generated/prisma/client';
 
 export type ProjectDTO = Pick<Project, 'title' | 'description'>;
+
+export type SearchProject = Pick<Project, 'title'>;
